Fix scrollbars in Today and Week tabs

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -87,7 +87,7 @@ p {
 }
 
 #root {
-  min-height: 100svh;
+  height: 100svh;
   display: flex;
   flex-direction: column;
 }
